<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvC346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_C346" />

    <TextView
        android:id="@+id/tvC203"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_C203" />

    <TextView
        android:id="@+id/tvC206"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_C206" />

    <TextView
        android:id="@+id/tvC218"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_C218" />

    <TextView
        android:id="@+id/tvC235"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_C235" />

</LinearLayout>